# av-scenechange

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md  build.rs  rust-toolchain.toml  rustfmt.toml
.github/workflows/: av-scenechange.yml  dependabot.yml  deploy-windows.yml  deploy.yml
benches/: micro_bench.rs  scd_bench.rs
src/: analyze.rs  cost.rs  cpu.rs  data.rs  decoder.rs  ffmpeg.rs  frame.rs  lib.rs  main.rs  math.rs  mc.rs  me.rs  pred.rs  refs.rs  util.rs  vapoursynth.rs  y4m.rs
src/analyze/: fast.rs  importance.rs  inter.rs  intra.rs  mod.rs  standard.rs
src/analyze/importance/: tests.rs
src/analyze/intra/: avx2.rs  avx512icl.rs  mod.rs  rust.rs  simd_x86.rs  ssse3.rs  tests.rs
src/asm/arm/: tables.S
src/asm/arm/64/: ipred.S  ipred16.S  mc.S  mc16.S  satd.S  util.S
src/asm/x86/: ipred16_avx2.asm  ipred16_avx512.asm  ipred16_sse.asm  ipred_avx2.asm  ipred_avx512.asm  ipred_sse.asm  mc16_avx2.asm  mc16_avx512.asm  mc16_sse.asm  mc_avx2.asm  mc_avx512.asm  mc_sse.asm  sad_avx.asm  sad_plane.asm  sad_sse2.asm  satd.asm  satd16_avx2.asm  tables.asm
src/data/: block.rs  frame.rs  hadamard.rs  mc.rs  mod.rs  motion.rs  plane.rs  prediction.rs  sad.rs  satd.rs  superblock.rs  tile.rs
src/data/mc/: avx2.rs  avx512icl.rs  mod.rs  neon.rs  rust.rs  simd_neon.rs  simd_x86.rs  ssse3.rs
src/data/sad/: avx2.rs  mod.rs  rust.rs  simd_x86.rs  sse2.rs  tests.rs
src/data/satd/: avx2.rs  mod.rs  neon.rs  rust.rs  simd_neon.rs  simd_x86.rs  sse4.rs  ssse3.rs  tests.rs
